tests/NormalTests/paczka1/fuzzy1/79805051.err
Error in line 3: z8c83eH S505 94,3
Error in line 4: z8c83eH S727 23,0
Error in line 8: z8c83eH S505 14,3
Error in line 15: BdImXUEn1Kq A783 20,1
Error in line 20: BdImXUEn1Kq S727 59,3
Error in line 21: BdImXUEn1Kq A600 30,3
Error in line 34: amc0DF0sJj A600 93,6
Error in line 33: Kj4 S727 35,8
Error in line 25: BdImXUEn1Kq S505 47,2
